<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="slogan">I love Coffee</string>
    <string name="todo">TODO</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_desc">User role</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_orderHistory">Lịch sử Order</string>
    <string name="menu_statistic">Thống kê</string>
    <string name="menu_users">TK Nhân viên</string>
    <string name="menu_drinks">Nước/Món</string>
    <string name="menu_tables">Dánh sách bàn</string>
    <string name="menu_changePassword">Đổi mật khẩu</string>
    <string name="menu_logout">Đăng xuất</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_order">Order</string>
    <string name="nav_orderHistory">Lịch sử Order</string>
    <string name="nav_statistic">Thống kê</string>
    <string name="nav_users">TK Nhân viên</string>
    <string name="nav_drinks">Nước/Món</string>
    <string name="nav_tables">Danh sách bàn</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Order</item>
        <item>Lịch sử Order</item>
        <item>Thống kê</item>
        <item>Danh sách bàn</item>
        <item>Nước/Món</item>
        <item>TK Nhân viên</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="chi_ti_t">Chi tiết</string>
    <string name="ch_nh_s_a">Chỉnh sửa</string>
    <string name="x_a">Xóa</string>
    <string name="ng">Đóng</string>
    <string name="t_o_t_i_kho_n_m_i">Tạo tài khoản mới</string>
</resources>
