<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_orderHistory"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_orderHistory" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_pie_chart_outlined_black_24dp"
            android:title="@string/nav_statistic" />
        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/ic_tablet_black_24dp"
            android:title="@string/nav_tables" />
        <item
            android:id="@+id/nav_drinks"
            android:icon="@drawable/ic_local_bar_black_24dp"
            android:title="@string/menu_drinks" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_users" />
    </group>

</menu>
