<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonOrderMenu"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/menu_order"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/icons8_purchase_order_96px_1"/>

            <Button
                android:id="@+id/buttonOrderHistoryMenu"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/menu_orderHistory"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/icons8_order_history_96px_2"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonStatisticMenu"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/menu_statistic"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/icons8_investment_portfolio_96px"/>

            <Button
                android:id="@+id/buttonAccountsMenu"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/menu_accounts"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/icons8_add_user_male_96px_1"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonTablesMenu"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/menu_tables"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/icons8_restaurant_table_96px_1"/>

            <Button
                android:id="@+id/buttonDrinksMenu"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="@string/menu_drinks"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/icons8_cafe_96px_1"/>

        </TableRow>

    </TableLayout>

</LinearLayout>